# vivid-sampler

./: .gitignore  CMakeLists.txt  vivid-package.json
.github/workflows/: smoke.yml
docs/: CHROMATIC_SAMPLER.md  SHARED_INFRASTRUCTURE.md  SLICER.md  SP404.md
graphs/: sampler_chromatic.json  slicer_loop.json  sp404_one_shot.json
scripts/: fetch-test-assets.sh
src/: sampler.cpp  slicer.cpp  sp404.cpp
src/common/: miniaudio_impl.c  sample_bank.h  voice.h  yyjson_impl.c
